Address review board comments